1st attempt at fixing spacing issues for nokia C1

--- a/unicorecmsffl/static/css/style.css
+++ b/unicorecmsffl/static/css/style.css
@@ -4,7 +4,7 @@
 
 /*  GLOBAL  */
 
-    html, body { margin: 0; padding: 0; color: #666; background: #fff; font-size: 1em; font-family: Arial, Helvetica, sans-serif; line-height: 1.3em; -webkit-text-size-adjust: none; }
+    html, body { margin: 0; padding: 0; color: #666; background: #fff; font-size: 1em; font-family: Arial, Helvetica, sans-serif; -webkit-text-size-adjust: none; }
     input, select, textarea { font-size: 95%; font-family: Arial, Helvetica, sans-serif; }
     a { color: #009aef; text-decoration: none; }
     .clear { width: 100%; height: 0px; clear: both; display: block; }
